kubia-yamls/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: srodi-namespace
  namespace: simone
  labels:
    istio-injection: enabled
