kubia-yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: srodi-service
  namespace: simone
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
      app: srodi
